# oldfreebsd

./: LICENSE
Billing-2.0.7/: Makefile  config.h  config.h.in  config.status  configure  configure.in
Billing-2.0.7/Web-Stat/: config.php  head.php  index.html  showtraf.php  squid.php
Billing-2.0.7/Web-Stat/admin/: .htaccess  .htpasswd  config.php  head.php  index.html  showtraf.php  squid.php  trafip.php  traftotal.php
Billing-2.0.7/Web-Stat/malenko/: config.php  ctraf.php  head.php  index.html  showtraf.php  squid.php  trafip.php  traftotal.php
Billing-2.0.7/db/: internet.gbk  internet.gdb  internet.sql  purge.sql  upgrade20.sql
Billing-2.0.7/mnlib3/: Makefile  Makefile.Win32  Makefile.in  checks.c  mnlib.res  mnlib3.h  month.c  round.c  stringop.c  token.c
Billing-2.0.7/scripts/: 001.billing.sh  crontab  logf.cron  logf.rules.manual  rotatesquidlog
Billing-2.0.7/src/: Makefile  Makefile.in  gencount.c  logf.c  logf.h  rules.c  rules.h
MNsqLog/: Makefile  mnsqlog.c
checkmail-1.2.1/: INSTALL  Makefile  Makefile.in  README  checkmail.c  checkmail.h  config.h  config.h.in  config.status  configure  configure.in
